// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .supportImageContainerClass {
  display: none;
}

.c0 .supportSummaryClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .leadSummary125Class {
  display: block;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c0 .leadHeadlineClass {
    font-size: 30px;
    line-height: 30px;
  }

  .c0 .leadImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
    padding-right: 10px;
  }

  .c0 .leadContentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-bottom: 10px;
    min-width: 300px;
  }

  .c0 .supportImageContainerClass {
    display: block;
  }

  .c0 .leadSummary125Class {
    display: block;
  }

  .c0 .leadSummary175Class {
    display: none;
  }
}

@media (min-width:1024px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding-bottom: 10px;
    padding-left: 0px;
    padding-right: 0px;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c3 {
    -webkit-box-flex: 1.5;
    -webkit-flex-grow: 1.5;
    -ms-flex-positive: 1.5;
    flex-grow: 1.5;
  }
}

<style>
{
  "S1": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S2": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S3": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S4": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S5": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 S5"
>
  <div
    className="c1 S4"
  >
    <div
      className="c2 S3"
    >
      <div
        className="c3 S2"
      >
        <div
          className="S1"
        >
          lead
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. two child elements 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c0 .supportImageContainerClass {
  display: none;
}

.c0 .supportSummaryClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .leadSummary125Class {
  display: block;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c4 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c6 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c0 .leadHeadlineClass {
    font-size: 30px;
    line-height: 30px;
  }

  .c0 .leadImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
    padding-right: 10px;
  }

  .c0 .leadContentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-bottom: 10px;
    min-width: 300px;
  }

  .c0 .supportImageContainerClass {
    display: block;
  }

  .c0 .leadSummary125Class {
    display: block;
  }

  .c0 .leadSummary175Class {
    display: none;
  }
}

@media (min-width:1024px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding-bottom: 10px;
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 3;
    -webkit-flex-grow: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:1024px) {
  .c3 {
    -webkit-box-flex: 2.75;
    -webkit-flex-grow: 2.75;
    -ms-flex-positive: 2.75;
    flex-grow: 2.75;
  }
}

@media (min-width:768px) {
  .c4 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-top: 0;
  }
}

<style>
{
  "S1": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S2": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S3": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S4": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S5": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S6": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S7": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S8": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S9": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 S9"
>
  <div
    className="c1 S8"
  >
    <div
      className="c2 S7"
    >
      <div
        className="c3 S2"
      >
        <div
          className="S1"
        >
          lead
        </div>
      </div>
      <div
        className="c4 S3"
      />
      <div
        className="c5 S6"
      >
        <div
          className="c6 S5"
        >
          <div
            className="S4"
          >
            support-1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. three child elements 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c0 .supportImageContainerClass {
  display: none;
}

.c0 .supportSummaryClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .leadSummary125Class {
  display: block;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c4 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c6 {
  padding-left: 10px;
  padding-right: 10px;
}

.c7 {
  padding-left: 10px;
  padding-right: 10px;
  border-top-color: #DBDBDB;
  border-top-style: solid;
  border-top-width: 1px;
  margin-top: 10px;
  padding-top: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c0 .leadHeadlineClass {
    font-size: 30px;
    line-height: 30px;
  }

  .c0 .leadImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
    margin-bottom: 10px;
    min-width: 370px;
  }

  .c0 .leadContentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-bottom: 10px;
    min-width: 300px;
  }

  .c0 .supportImageContainerClass {
    display: block;
  }

  .c0 .leadSummary125Class {
    display: none;
  }

  .c0 .leadSummary175Class {
    display: block;
  }
}

@media (min-width:1024px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
    min-width: auto;
  }

  .c0 .supportImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    max-width: 185px;
    min-width: auto;
    padding-right: 10px;
  }

  .c0 .supportContentContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: 100px;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding-bottom: 10px;
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    -ms-flex-positive: 2;
    flex-grow: 2;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:1024px) {
  .c3 {
    -webkit-box-flex: 1.5;
    -webkit-flex-grow: 1.5;
    -ms-flex-positive: 1.5;
    flex-grow: 1.5;
  }
}

@media (min-width:768px) {
  .c4 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-top: 10px;
  }
}

<style>
{
  "S1": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S10": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S11": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S2": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S3": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S4": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S5": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S6": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S7": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S8": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
  "S9": {
    "border-bottom-width": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
  },
}
</style>

<div
  className="c0 S11"
>
  <div
    className="c1 S10"
  >
    <div
      className="c2 S9"
    >
      <div
        className="c3 S2"
      >
        <div
          className="S1"
        >
          lead
        </div>
      </div>
      <div
        className="c4 S3"
      />
      <div
        className="c5 S8"
      >
        <div
          className="c6 S5"
        >
          <div
            className="S4"
          >
            support-1
          </div>
        </div>
        <div
          className="c7 S7"
        >
          <div
            className="S6"
          >
            support-2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
